// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionsListSchema should not accept inconsistent key and id: multiple 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  The key for the question in questions list should be same as its question ID.
"
`;

exports[`QuestionsListSchema should not accept inconsistent key and id: single 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  The key for the question in questions list should be same as its question ID.
"
`;

exports[`QuestionsListSchema should not accept non-existent next: multiple 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  A question's \`next\` question ID is not present in the question list.
"
`;

exports[`QuestionsListSchema should not accept non-existent next: single 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at 
  A question's \`next\` question ID is not present in the question list.
"
`;
